correction of menu styles in the mobile version so that it uses the correct background of the defined variables and can be seen visually correctly in dark mode. Additionally, unnecessary code that is already defined in the renderMenu function is removed

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -55,3 +55,7 @@
 .container-right {
   left: -1px;
 }
+
+.mobileMenu{
+  top:56.5px;
+}
